--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,27 @@
 header {
-  background-color: linear-gradient (var(--purple), var(--dark-purple));
   padding: 20px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.header-light {
+  background: linear-gradient(var(--purple), var(--dark-purple));
+  color: black;
+}
+
+.header-dark {
+  background: var(--dark-gray);
+  color: white;
+}
+
+.header_top-row {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 35px;
+}
+
+.search-container {
+  display: flex;
+  align-self: center;
 }
