--- a/src/Header.css
+++ b/src/Header.css
@@ -23,5 +23,32 @@ header {
 
 .search-container {
   display: flex;
-  align-self: center;
+  /* align-self: center; */
+  justify-content: center;
+}
+
+input {
+  padding: 10px 30px;
+}
+
+.search {
+  background-color: white;
+  padding: 10px 20px;
+}
+
+span {
+  padding-left: 5px;
+  padding-right: 8px;
+  font-size: 10px;
+  font-weight: 800;
+}
+
+.search-btn {
+  font-size: 8px;
+  color: white;
+  font-weight: 800;
+  background-color: var(--dark-purple);
+  padding: 5px 15px;
+  border: none;
+  border-radius: 3px;
 }
