--- a/src/Header.css
+++ b/src/Header.css
@@ -34,6 +34,7 @@ input {
 .search {
   background-color: white;
   padding: 10px 20px;
+  position: relative;
 }
 
 span {
@@ -51,4 +52,30 @@ span {
   padding: 5px 15px;
   border: none;
   border-radius: 3px;
+}
+
+.search-input,
+.location-div {
+  position: relative;
+}
+
+.search-icon,
+.location-icon {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  color: var(--dark-purple);
+}
+
+label {
+  padding-left: 10px;
+  padding-right: 15px;
+  font-size: 10px;
+  font-weight: 800;
+}
+.checkbox {
+  position: absolute;
+  left: 10px;
+  top: 14px;
+  padding-right: 15px;
 }
